--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,15 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>This is FRONTEND</title>
+	<title>Buttons</title>
 </head>
 <body>
 	<div id="root"></div>
+	<section>
+		<h3>Click</h3>
+	</section>
+	<section>
+		<h3>Click again</h3>
+	</section>
 </body>
 </html>
