--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,15 +4,21 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Montserrat:wght@100&family=Poppins:ital,wght@0,100;0,200;1,100&display=swap" rel="stylesheet"> 
 	<title>Buttons</title>
 </head>
 <body>
-	<div id="root"></div>
 	<section>
-		<h3>Click</h3>
+		<h3><a href="https://www.nba.com" target=_blank>Click</a></h3>
 	</section>
 	<section>
-		<h3>Click again</h3>
+		<h3><a href="#A">Click again</a><h3>
+	</section>
+	<section>
+		<h1 id="A">A</h1>
 	</section>
 </body>
 </html>
