--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,11 @@
 		<h3><a href="https://www.nba.com" target=_blank>Click</a></h3>
 	</section>
 	<section>
-		<h3><a href="#A">Click again</a><h3>
+		<h3><a href="#A">Click again</a></h3>
 	</section>
 	<section>
 		<h1 id="A">A</h1>
+		<h2>B</h2>
 	</section>
 </body>
 </html>
